fix: hot-reload JetBrains plugin packages